modules/cli/src/test/resources/bad/reach/globals/grecursion/Recursion19b.scr
module bad.reach.globals.grecursion.Recursion19b;


global protocol Proto1(role A, role B)
{
	rec X
	{
		choice at A
		{
			continue X;
		}
		or
		{
			2() from A to B;
		}
		1() from A to B;  // Reachability error -- comes out as a global model error if that pass is done first (tail recursion needed as syntactic check prior to model checking)  // Reachability now done before model check
	}
}

